# pco-sync

./: pyproject.toml
src/pco_sync/: main.py  mainv2.py  sync_script.py
