[project]
name = "pco-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "trop3n",email = "jasondkimm@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "msal (>=1.32.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pco_sync", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
